# mapstyle

./: .dockerignore.prod  .env.example  .gitignore  DOCKER.md  Dockerfile  Dockerfile.dev  Makefile  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
docs/: API.md  README.md  TESTING.md
frontend/: Dockerfile.prod  README.md  SETUP.md  index.html  nginx.conf  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: symbology.ts
frontend/src/components/: ExportPanel.tsx  ShareButton.tsx  SymbologyForm.tsx  SymbologyPreview.tsx
frontend/src/components/FormControls/: ColorPicker.tsx  FillStyleSelect.tsx  GeometryTypeSelect.tsx  MarkerTypeSelect.tsx  NumberSlider.tsx  StrokeStyleSelect.tsx
frontend/src/hooks/: useSymbology.ts
frontend/src/pages/: Creator.tsx  Viewer.tsx
frontend/src/types/: symbology.ts
frontend/src/utils/: constants.ts
nginx/: nginx.conf
scr/api/: main.py
scr/api/routes/: symbology.py
scr/api/schemas/: responses.py  symbology_schema.py
scr/api/services/: preview.py
scr/core/model/: symbology.py
tests/: test_api.py  test_symbology.py
